--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "tsc": "cd public && npm run tsc",
     "tsc:w": "cd public && npm run tsc:w",
     "express": "node ./bin/www",
-    "express-debug": "node-debug ./bin/www"
+    "express-debug": "node-debug ./bin/www",
+    "install-all": "npm install && cd public && npm install"
   },
   "dependencies": {
     "body-parser": "~1.15.1",
