--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "tsc:w": "cd public && npm run tsc:w",
     "express": "node ./bin/www",
     "express-debug": "node-debug ./bin/www",
-    "install-all": "npm install && cd public && npm install"
+    "install-all": "npm install && cd public && npm install",
+    "postinstall": "cd public && npm install"
   },
 
   "//": "The Node.js modules that are needed for the server-side application (the",
