--- a/public/package.json
+++ b/public/package.json
@@ -24,6 +24,7 @@
     "@angular/upgrade": "2.0.0-rc.6",
     "bootstrap": "^3.3.6",
     "core-js": "^2.4.1",
+    "digest-auth-request": "^0.6.2",
     "gulp": "^3.9.1",
     "reflect-metadata": "^0.1.3",
     "rx": "^4.1.0",
