too many files were being ignored

--- a/public/.gitignore
+++ b/public/.gitignore
@@ -4,10 +4,8 @@ node_modules
 jspm_packages
 link-checker-results.txt
 **/*npm-debug.log.*
-*.js
-*.js.map
-e2e/**/*.js
-e2e/**/*.js.map
+app/*.js
+app/*.js.map
 _test-output
 _temp
 
